# rust_gui_vulkan_trainning

./: .gitignore  README.md
002_learning_OpenGL_Rust/: README.md
003_examples/: README.md
003_examples/polygon/: Cargo.toml  README.md
003_examples/polygon/assets/: polygon.frag  polygon.vert
003_examples/polygon/src/: main.rs
003_examples/triangle/: Cargo.toml  README.md
003_examples/triangle/src/: main.rs
003_examples/triangle_file_input_style/: Cargo.toml
003_examples/triangle_file_input_style/src/: main.rs
a01_game_of_life/: Cargo.toml
a01_game_of_life/src/: app.rs  game_of_life.rs  pixels_draw.rs  render_pass.rs
