[package]
name = "a01_game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.27.0"
rand = "0.8.5"
vulkano = { version = "0.34.1", features = ["macros"] }
vulkano-shaders = "0.34.0"
vulkano-util = "0.34.1"
winit = "0.29.15"



[profile.dev]
opt-level = 1 
